tests/baselines/reference/ComputedPropertyName19_es6.errors.txt
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName19_es6.ts(1,13): error TS1005: ';' expected.


==== tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName19_es6.ts (1 errors) ====
    var v: { [e]? };
                ~
!!! error TS1005: ';' expected.